# LabelTorch

./: .commit_msg.txt  .gitignore  LICENSE  LabelTorch.spec  README.md  build_release.bat  main.py  pyproject.toml  requirements.txt  start.bat  start.sh
.comate/specs/labeltorch-full-product/: doc.md  summary.md  tasks.md
.comate/specs/open-source-readme/: doc.md  summary.md  tasks.md
.monkeycode/: MEMORY.md
.monkeycode/specs/2026-05-09-yolo-studio-desktop/: INDEX.md  ai-execution-contract.md  blueprint.md  boundary-and-assumptions.md  data-architecture.md  design.md  file-architecture.md  nonfunctional-requirements.md  packaging-and-distribution.md  prd.md  product-roadmap-detailed.md  qa-and-release-governance.md  requirements.md  risk-register.md  system-architecture.md  tasklist.md  version-definition-of-done.md  workflow-architecture.md
labeltorch/: __init__.py  __main__.py  main.py
labeltorch/app/: __init__.py  app_context.py  context.py
labeltorch/app/domain/: __init__.py  bbox.py  enums.py  models.py  schemas.py
labeltorch/app/infra/: __init__.py  startup_check.py
labeltorch/app/services/: __init__.py  annotation_service.py  assisted_annotation_service.py  dataset_service.py  export_service.py  inference_service.py  project_service.py  training_service.py  version_service.py
labeltorch/app/tasks/: __init__.py
labeltorch/app/ui/: __init__.py  main_window.py
labeltorch/tests/integration/: __init__.py
labeltorch/tests/unit/: __init__.py  test_database.py  test_dataset_service.py  test_project_service.py  (+2 more)
reference/: REFERENCE_LINKS.md
(+17 files in other folders)
