[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labeltorch"
version = "0.1.0"
description = "LabelTorch - Industrial Defect Detection Annotation & Training Tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "LabelTorch Team"}]

dependencies = [
    "PySide6>=6.5",
    "Pillow>=9.0",
    "ultralytics>=8.0",
]

[project.optional-dependencies]
export = ["onnxruntime>=1.15"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
labeltorch = "labeltorch.main:main"

[tool.setuptools.packages.find]
include = ["labeltorch*"]

[tool.pytest.ini_options]
testpaths = ["labeltorch/tests"]
